# py-bot

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
fortune/: group_rules.json
