[tool.poetry]
name = "py-bot"
version = "0.1.0"
description = ""
authors = ["skaimid <zhuzhaoxin2016@gmail.com>"]
readme = "README.md"
packages = [{include = "py_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.0.0rc3"}
nonebot-adapter-onebot = "^2.2.1"
nonebot-plugin-fortune = "^0.4.10.post1"
nonebot-bison = "^0.7.0"
nonebot-plugin-crazy-thursday = "^0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nonebot]
plugin_dirs = ["src/plugins"]
plugins = ["nonebot_plugin_fortune", "nonebot_bison", "nonebot-plugin-crazy-thursday"]
builtin_plugins = ["echo", "single_session"]